--- a/Views/Interactions/TestInteractionWindow.xaml
+++ b/Views/Interactions/TestInteractionWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
         xmlns:local="clr-namespace:JiME"
 		xmlns:uc="clr-namespace:JiME.UserControls"
         mc:Ignorable="d"
@@ -17,6 +18,26 @@
 			<Setter Property="Margin" Value="0,5"/>
 			<Setter Property="VerticalAlignment" Value="Center"/>
 		</Style>
+		<CollectionViewSource x:Key="cvsTriggeredBy" Source="{Binding scenario.triggersObserver}">
+			<CollectionViewSource.SortDescriptions>
+				<scm:SortDescription PropertyName="dataName"/>
+			</CollectionViewSource.SortDescriptions>
+		</CollectionViewSource>
+		<CollectionViewSource x:Key="cvsTriggerAfter" Source="{Binding scenario.triggersObserver}">
+			<CollectionViewSource.SortDescriptions>
+				<scm:SortDescription PropertyName="dataName"/>
+			</CollectionViewSource.SortDescriptions>
+		</CollectionViewSource>
+		<CollectionViewSource x:Key="cvsSuccessTrigger" Source="{Binding scenario.triggersObserver}">
+			<CollectionViewSource.SortDescriptions>
+				<scm:SortDescription PropertyName="dataName"/>
+			</CollectionViewSource.SortDescriptions>
+		</CollectionViewSource>
+		<CollectionViewSource x:Key="cvsFailTrigger" Source="{Binding scenario.triggersObserver}">
+			<CollectionViewSource.SortDescriptions>
+				<scm:SortDescription PropertyName="dataName"/>
+			</CollectionViewSource.SortDescriptions>
+		</CollectionViewSource>
 	</Window.Resources>
 
 	<StackPanel>
@@ -83,7 +104,7 @@
 								<StackPanel HorizontalAlignment="Left">
 									<TextBlock Text="Triggered By (Optional):" Style="{StaticResource Heading}"/>
 									<StackPanel Orientation="Horizontal">
-										<ComboBox VerticalAlignment="Center" Name="triggeredByCB" Width="250" ItemsSource="{Binding scenario.triggersObserver}" DisplayMemberPath="dataName" SelectedValue="{Binding interaction.triggerName}" SelectedValuePath="dataName" Margin="0" HorizontalAlignment="Left" IsEnabled="{Binding interaction.isTokenInteraction, Converter={StaticResource binv}}"/>
+										<ComboBox VerticalAlignment="Center" Name="triggeredByCB" Width="250" ItemsSource="{Binding Source={StaticResource cvsTriggeredBy}}" DisplayMemberPath="dataName" SelectedValue="{Binding interaction.triggerName}" SelectedValuePath="dataName" Margin="0" HorizontalAlignment="Left" IsEnabled="{Binding interaction.isTokenInteraction, Converter={StaticResource binv}}"/>
 										<Button x:Name="addMainTriggerButton" Background="MediumSeaGreen" Margin="10,0" Height="32" Width="32" Click="addMainTriggerButton_Click" IsEnabled="{Binding ElementName=isTokenCB, Path=IsChecked, Converter={StaticResource binv}}">
 											<Image Source="/JiME;component/Assets/add2.png"/>
 										</Button>
@@ -93,7 +114,7 @@
 								<StackPanel HorizontalAlignment="Left" Margin="10,0,0,0">
 									<TextBlock Text="Set Trigger After Event Is Resolved (Optional):" Style="{StaticResource Heading}"/>
 									<StackPanel Orientation="Horizontal">
-										<ComboBox VerticalAlignment="Center" HorizontalAlignment="Left" Width="250" ItemsSource="{Binding scenario.triggersObserver}" DisplayMemberPath="dataName" SelectedValue="{Binding interaction.triggerAfterName}" SelectedValuePath="dataName" Margin="0,3,0,0"/>
+										<ComboBox VerticalAlignment="Center" HorizontalAlignment="Left" Width="250" ItemsSource="{Binding Source={StaticResource cvsTriggerAfter}}" DisplayMemberPath="dataName" SelectedValue="{Binding interaction.triggerAfterName}" SelectedValuePath="dataName" Margin="0,3,0,0"/>
 										<Button x:Name="addMainTriggerAfterButton" Background="MediumSeaGreen" Margin="10,0" Height="32" Width="32" Click="addMainTriggerAfterButton_Click">
 											<Image Source="/JiME;component/Assets/add2.png"/>
 										</Button>
@@ -262,7 +283,7 @@
 							<StackPanel Margin="0,0,5,0">
 								<TextBlock Text="Trigger On Pass (Optional):" Style="{StaticResource Heading}"/>
 								<StackPanel Orientation="Horizontal">
-									<ComboBox ItemsSource="{Binding scenario.triggersObserver}" SelectedValue="{Binding interaction.successTrigger}" SelectedValuePath="dataName" DisplayMemberPath="dataName" MinWidth="200" VerticalAlignment="Center"/>
+									<ComboBox ItemsSource="{Binding Source={StaticResource cvsSuccessTrigger}}" SelectedValue="{Binding interaction.successTrigger}" SelectedValuePath="dataName" DisplayMemberPath="dataName" MinWidth="200" VerticalAlignment="Center"/>
 									<Button x:Name="addTriggerPassButton" Background="MediumSeaGreen" Margin="10,0" Height="32" Width="32" Click="AddTriggerPassButton_Click">
 										<Image Source="/JiME;component/Assets/add2.png"/>
 									</Button>
@@ -271,7 +292,7 @@
 							<StackPanel Margin="5,0,0,0">
 								<TextBlock Text="Trigger On Fail (Optional):" Style="{StaticResource Heading}"/>
 								<StackPanel Orientation="Horizontal">
-									<ComboBox ItemsSource="{Binding scenario.triggersObserver}" SelectedValue="{Binding interaction.failTrigger}" SelectedValuePath="dataName" DisplayMemberPath="dataName" MinWidth="200"  VerticalAlignment="Center"/>
+									<ComboBox ItemsSource="{Binding Source={StaticResource cvsFailTrigger}}" SelectedValue="{Binding interaction.failTrigger}" SelectedValuePath="dataName" DisplayMemberPath="dataName" MinWidth="200"  VerticalAlignment="Center"/>
 									<Button x:Name="addTriggerFailButton" Background="MediumSeaGreen" Margin="10,0" Height="32" Width="32" Click="AddTriggerFailButton_Click">
 										<Image Source="/JiME;component/Assets/add2.png"/>
 									</Button>
