--- a/Views/Interactions/ReplaceTokenInteractionWindow.xaml
+++ b/Views/Interactions/ReplaceTokenInteractionWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
         xmlns:local="clr-namespace:JiME"
 		xmlns:uc="clr-namespace:JiME.UserControls"
         mc:Ignorable="d"
@@ -18,6 +19,26 @@
 			<Setter Property="Margin" Value="0,5"/>
 			<Setter Property="VerticalAlignment" Value="Center"/>
 		</Style>
+		<CollectionViewSource x:Key="cvsTriggeredBy" Source="{Binding scenario.triggersObserver}">
+			<CollectionViewSource.SortDescriptions>
+				<scm:SortDescription PropertyName="dataName"/>
+			</CollectionViewSource.SortDescriptions>
+		</CollectionViewSource>
+		<CollectionViewSource x:Key="cvsTriggerAfter" Source="{Binding scenario.triggersObserver}">
+			<CollectionViewSource.SortDescriptions>
+				<scm:SortDescription PropertyName="dataName"/>
+			</CollectionViewSource.SortDescriptions>
+		</CollectionViewSource>
+		<CollectionViewSource x:Key="cvsEventToReplace" Source="{Binding eventToReplace}">
+			<CollectionViewSource.SortDescriptions>
+				<scm:SortDescription PropertyName="dataName"/>
+			</CollectionViewSource.SortDescriptions>
+		</CollectionViewSource>
+		<CollectionViewSource x:Key="cvsReplaceWithEvent" Source="{Binding replaceWith}">
+			<CollectionViewSource.SortDescriptions>
+				<scm:SortDescription PropertyName="dataName"/>
+			</CollectionViewSource.SortDescriptions>
+		</CollectionViewSource>
 	</Window.Resources>
 
 	<Grid>
@@ -89,7 +110,7 @@
 								<StackPanel HorizontalAlignment="Left">
 									<TextBlock Text="Triggered By (Optional):" Style="{StaticResource Heading}"/>
 									<StackPanel Orientation="Horizontal">
-										<ComboBox VerticalAlignment="Center" Name="triggeredByCB" Width="250" ItemsSource="{Binding scenario.triggersObserver}" DisplayMemberPath="dataName" SelectedValue="{Binding interaction.triggerName}" SelectedValuePath="dataName" Margin="0" HorizontalAlignment="Left" IsEnabled="{Binding interaction.isTokenInteraction, Converter={StaticResource binv}}"/>
+										<ComboBox VerticalAlignment="Center" Name="triggeredByCB" Width="250" ItemsSource="{Binding Source={StaticResource cvsTriggeredBy}}" DisplayMemberPath="dataName" SelectedValue="{Binding interaction.triggerName}" SelectedValuePath="dataName" Margin="0" HorizontalAlignment="Left" IsEnabled="{Binding interaction.isTokenInteraction, Converter={StaticResource binv}}"/>
 										<Button x:Name="addMainTriggerButton" Background="MediumSeaGreen" Margin="10,0" Height="32" Width="32" Click="addMainTriggerButton_Click" IsEnabled="{Binding ElementName=isTokenCB, Path=IsChecked, Converter={StaticResource binv}}">
 											<Image Source="/JiME;component/Assets/add2.png"/>
 										</Button>
@@ -99,7 +120,7 @@
 								<StackPanel HorizontalAlignment="Left" Margin="10,0,0,0">
 									<TextBlock Text="Set Trigger After Event Is Resolved (Optional):" Style="{StaticResource Heading}"/>
 									<StackPanel Orientation="Horizontal">
-										<ComboBox VerticalAlignment="Center" HorizontalAlignment="Left" Width="250" ItemsSource="{Binding scenario.triggersObserver}" DisplayMemberPath="dataName" SelectedValue="{Binding interaction.triggerAfterName}" SelectedValuePath="dataName" Margin="0"/>
+										<ComboBox VerticalAlignment="Center" HorizontalAlignment="Left" Width="250" ItemsSource="{Binding Source={StaticResource cvsTriggerAfter}}" DisplayMemberPath="dataName" SelectedValue="{Binding interaction.triggerAfterName}" SelectedValuePath="dataName" Margin="0"/>
 										<Button x:Name="addMainTriggerAfterButton" Background="MediumSeaGreen" Margin="10,0" Height="32" Width="32" Click="addMainTriggerAfterButton_Click">
 											<Image Source="/JiME;component/Assets/add2.png"/>
 										</Button>
@@ -189,12 +210,12 @@
 							</UniformGrid>
 							<UniformGrid Columns="2">
 								<StackPanel Orientation="Horizontal">
-									<ComboBox Name="eventToReplaceList" Margin="10,0,0,0" MinWidth="300" SelectedValue="{Binding interaction.eventToReplace}" SelectedValuePath="dataName" DisplayMemberPath="dataName" ItemsSource="{Binding eventToReplace}"/>
+									<ComboBox Name="eventToReplaceList" Margin="10,0,0,0" MinWidth="300" SelectedValue="{Binding interaction.eventToReplace}" SelectedValuePath="dataName" DisplayMemberPath="dataName" ItemsSource="{Binding Source={StaticResource cvsEventToReplace}}"/>
 									<uc:AddEventPopup Scenario="{Binding scenario}" HorizontalAlignment="Right" />
 								</StackPanel>
 
 								<StackPanel Orientation="Horizontal">
-									<ComboBox Name="replaceWithList" Margin="10,0,0,0" MinWidth="300" SelectedValue="{Binding interaction.replaceWithEvent}" SelectedValuePath="dataName" DisplayMemberPath="dataName" ItemsSource="{Binding replaceWith}"/>
+									<ComboBox Name="replaceWithList" Margin="10,0,0,0" MinWidth="300" SelectedValue="{Binding interaction.replaceWithEvent}" SelectedValuePath="dataName" DisplayMemberPath="dataName" ItemsSource="{Binding Source={StaticResource cvsReplaceWithEvent}}"/>
 									<uc:AddEventPopup Scenario="{Binding scenario}" HorizontalAlignment="Right" />
 								</StackPanel>
 							</UniformGrid>
