--- a/Views/Interactions/MultiEventWindow.xaml
+++ b/Views/Interactions/MultiEventWindow.xaml
@@ -254,7 +254,7 @@
 									<StackPanel Orientation="Horizontal" Grid.Column="2">
 										<ComboBox x:Name="eventCB" HorizontalAlignment="Left" VerticalAlignment="Center" ItemsSource="{Binding Source={StaticResource cvsEvent}}" SelectedValuePath="dataName" DisplayMemberPath="dataName" MinWidth="200" SelectionChanged="eventCB_SelectionChanged"/>
 										<Button x:Name="addSelectedEventButton" Click="addSelectedEventButton_Click" Content="Add Selected Event" Background="DodgerBlue" Foreground="White" Margin="10,0,0,0" IsEnabled="False"/>
-										<uc:AddEventPopup Scenario="{Binding scenario}" HorizontalAlignment="Right" />
+										<uc:AddEventPopup Scenario="{Binding scenario}" HorizontalAlignment="Right" ActionToHandleCreatedEvent="CreatedNewEvent" />
 									</StackPanel>
 								</Grid>
 
